# cpp-multinode

./: .gitignore  CMakeList.txt  pyproject.toml  run_demo.py
cpp-addon/: CMakeLists.txt  pyproject.toml
cpp-addon/src/cpp/: core.cpp
cpp-addon/src/cpp_addon/: __init__.py
python-app/: module.py  run_cluster.py
src/cpp/: core.cpp
src/ray_demo/: __init__.py
tests/: test.py
tools/: build_and_distribute.sh  distribute_wheel.py  update_and_run.sh
