[build-system]
requires = ["scikit-build-core>=0.9.2", "pybind11>=2.11", "setuptools>=68", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "ray-cpp-demo"
version = "0.1.0"
description = "Tiny pybind11 + Ray demo: distribute C++ via wheel and print on each node"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.scikit-build]
wheel.packages = ["src/ray_cpp_demo"]
cmake.minimum-version = "3.18"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.sdist]
include = [
  "CMakeLists.txt",
  "src/cpp/core.cpp",
  "src/ray_cpp_demo/__init__.py",
  "pyproject.toml",
]
